--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "Logger.js",
   "scripts": {
-    "test": "LOG_LEVEL=OFF mocha test/unit/* --reporter spec"
+    "test": "NODE_ENV=test mocha test/unit/* --reporter spec"
   },
   "repository": {
     "type": "git",
