--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ before_install:
   - export PATH=$HOME/.yarn/bin:$PATH
 script:
   - yarn --version
+  - yarn install
   - yarn test
 before_install:
   - yarn global add greenkeeper-lockfile@1
