--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,8 @@
 language: node_js
 cache: yarn
-before_install:
-  - curl -o- -L https://yarnpkg.com/install.sh | bash -s -- --version 1.2.1
-  - export PATH=$HOME/.yarn/bin:$PATH
 script:
   - yarn --version
-  - yarn install
+  - yarn check --integrity
   - yarn test
 before_install:
   - yarn global add greenkeeper-lockfile@1
