--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "lodash.merge": "^4.6.0",
     "log4js": "^2.3.5",
     "moment": "^2.19.3",
-    "on-finished": "^2.3.0"
+    "on-finished": "^2.3.0",
+    "uuid": "^3.1.0"
   },
   "devDependencies": {
     "chai": "^4.1.2",
