--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "HMCTS",
   "license": "MIT",
   "dependencies": {
+    "continuation-local-storage": "^3.2.1",
     "lodash.merge": "^4.6.0",
     "log4js": "^2.3.5",
     "moment": "^2.19.3",
