--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hmcts/nodejs-logging",
-  "version": "2.2.0",
+  "version": "3.0.0",
   "description": "",
   "main": "Logger.js",
   "scripts": {
@@ -15,10 +15,10 @@
   "dependencies": {
     "continuation-local-storage": "^3.2.1",
     "lodash.merge": "^4.6.0",
-    "log4js": "^2.3.5",
     "moment": "^2.19.3",
     "on-finished": "^2.3.0",
-    "uuid": "^3.1.0"
+    "uuid": "^3.1.0",
+    "winston": "^2.4.1"
   },
   "devDependencies": {
     "chai": "^4.1.2",
