--- a/.github/workflows/npmpublish.yml
+++ b/.github/workflows/npmpublish.yml
@@ -36,21 +36,5 @@ jobs:
       - run: npm publish
         if: startsWith(github.ref, 'refs/tags')
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.npm_token }}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_API_TOKEN }}
 
-  publish-gpr:
-    needs: build
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v1
-        if: startsWith(github.ref, 'refs/tags')
-      - uses: actions/setup-node@v1
-        if: startsWith(github.ref, 'refs/tags')
-        with:
-          node-version: 10
-          registry-url: https://npm.pkg.github.com/
-          scope: '@hmcts'
-      - run: npm publish
-        if: startsWith(github.ref, 'refs/tags')
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
