--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "dependencies": {
     "moment": "^2.19.3",
     "on-finished": "^2.3.0",
-    "winston": "^2.4.5"
+    "winston": "^3.7.2"
   },
   "devDependencies": {
     "assert": "^2.0.0",
@@ -24,7 +24,6 @@
     "mocha": "^9.2.2",
     "sinon": "^7.5.0",
     "sinon-chai": "^3.3.0",
-    "supertest": "6.2.2",
-    "winston-spy": "^0.2.0"
+    "supertest": "6.2.2"
   }
 }
