--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@hmcts/nodejs-logging",
   "version": "3.0.4",
   "description": "",
-  "main": "log/Logger.js",
+  "main": "Logger.js",
   "scripts": {
     "test": "LOG_LEVEL=OFF mocha test/unit/* --reporter spec"
   },
