--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
   "author": "HMCTS",
   "license": "MIT",
   "dependencies": {
+    "moment": "^2.19.3",
     "on-finished": "^2.3.0",
-    "winston": "^3.7.2"
+    "winston": "^2.4.5"
   },
   "devDependencies": {
     "assert": "^2.0.0",
@@ -22,6 +23,7 @@
     "mocha": "^9.2.2",
     "sinon": "^7.5.0",
     "sinon-chai": "^3.3.0",
-    "supertest": "6.2.2"
+    "supertest": "6.2.2",
+    "winston-spy": "^0.2.0"
   }
 }
